style.css
/* ===========================
   GOOGLE FONT & RESET
=========================== */

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family:'Poppins',sans-serif;
}

html{
    scroll-behavior:smooth;
}

:root{
    --black:#0f0f0f;
    --yellow:#FFC107;
    --red:#E53935;
    --white:#ffffff;
    --light:#FFF8F0;
    --gray:#9E9E9E;
}

body{
    /* background:var(--black); */
    color:var(--white);
    overflow-x:hidden;
}

img{
    max-width:100%;
    display:block;
}

a{
    text-decoration:none;
}

ul{
    list-style:none;
}
/* .menu-icon{
  display: block;
  font-size: 32px;
  cursor: pointer;
  color: black;
} */


/* ===== NAVBAR ===== */

.navbar{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 80px;

    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 0 40px;

    background: rgba(0,0,0,0.9);
    backdrop-filter: blur(8px);

    z-index: 1000;
}

/* Logo */

.logo{
    font-size: 32px;
    font-weight: 800;
    color: #E53935;
    letter-spacing: 1px;
    white-space: nowrap;
}




/* Menu */

.nav-links{
    display: flex;
    align-items: center;
    gap: 35px;
    list-style: none;
    margin-left: -50px;   /* -20px, -30px, -50px करून बघ */
    transform: translateX(-50px);
}

.nav-links a{
    color: white;
    text-decoration: none;
    font-size: 17px;
    font-weight: 500;
    transition: .3s;
}

.nav-links a:hover{
    color: #FFC107;
}


.menu-icon{
    display: block !important;
    color: white !important;
    font-size: 30px !important;
    position: fixed;
    top: 20px;
    right: 20px;
    z-index: 99999;
}


@media screen and (max-width:768px){

    .nav-links{
        display: none;
        flex-direction: column;
        position: absolute;
        top: 80px;
        left: 0;
        width: 100%;

        background: rgba(0,0,0,0.95);

        padding: 20px 0;
        gap: 20px;

        height: auto;
        overflow: visible;

        z-index: 1000;
    }

    .nav-links.active{
        display: flex;
    }

    .nav-links li{
        width: 100%;
        text-align: center;
        padding: 10px 0;
    }
}




/* Button */

.order-btn{
    background: #E53935;
    color: white;
    padding: 12px 28px;
    border-radius: 40px;
    text-decoration: none;
    font-weight: 600;
    transition: .3s;
}

.order-btn:hover{
    background: #FFC107;
    color: black;
}

.btn{
    background:var(--red);
    color:white;
    padding:13px 30px;
    border-radius:40px;
    font-weight:600;
    transition:.3s;
}

.btn:hover{
    background:var(--yellow);
    color:black;
}





/* ===========================
        HERO SECTION
=========================== */

.hero{

    width:100%;
    min-height:100vh;

    display:flex;
    align-items:center;

    padding:0 8%;
    padding-top:90px;

    background-image:
    linear-gradient(rgba(0,0,0,.65),
    rgba(0,0,0,.65)),
    url("./images/hero2.png");

    background-size:cover;
    background-position:center;
    background-repeat:no-repeat;
}

.hero-content{
    max-width:650px;
}

.hero-content h4{
    color:#E53935;
    font-size:26px;
    margin-bottom:15px;
}

.hero-content h1{
    font-size:72px;
    font-weight:800;
    line-height:1.1;
    color: #E53935;
}



.marathi-tagline{
    display:inline-block;
    margin-top:20px;
    /* background:var(--red); */
    color:white;
    padding:10px 20px;
    border-radius:6px;
    font-size:24px;
    font-weight:600;
    color: red;
}

.hero-content p{
    margin-top:25px;
    font-size:18px;
    line-height:32px;
    color:#dddddd;
}

.hero-btns{
    display:flex;
    gap:20px;
    margin-top:35px;
}

.btn2{
    border:2px solid var(--yellow);
    color:white;
    padding:13px 30px;
    border-radius:40px;
    transition:.3s;
}

.btn2:hover{
    background:var(--yellow);
    color:black;
}

.prev,
.next{
    position:absolute;
    top:50%;
    transform:translateY(-50%);
    width:50px;
    height:50px;
    border:none;
    border-radius:50%;
    background:rgba(0,0,0,0.5);
    color:#fff;
    font-size:24px;
    cursor:pointer;
}

.prev{
    left:20px;
}

.next{
    right:20px;
}

.prev:hover,
.next:hover{
    background:#FFC107;
    color:#000;
}
/*==========================
        ABOUT SECTION
===========================*/

.about{

    background:#ffffff;

    padding:100px 8%;

}

.about-container{

    display:flex;

    justify-content:space-between;

    align-items:center;

    gap:70px;

}

.about-image{

    flex:1;

}

.about-image img{

    width:100%;

    border-radius:25px;
    margin: top -20px;
    position: relative;
    top: -40px;

}

.about-content{

    flex:1;
    /* height: 500px; */
} 

.about-subtitle{

    font-family:'Great Vibes',cursive;

    color:#d62828;

    font-size:55px;

    margin-bottom:10px;

}

.about-title{

    font-size:58px;

    color:#111;

    font-weight:800;

    /* letter-spacing:2px; */

    margin-bottom:20px;

}

.about-line{

    width:120px;

    height:4px;

    background:#FFC107;

    margin-bottom:25px;

    border-radius:20px;

}

.about-text{

    color:#555;

    font-size:18px;

    line-height:34px;

    margin-bottom:35px;

}

.about-boxes{

    display:flex;

    gap:20px;

    margin-bottom:35px;

}

.box{

    flex:1;

    background:#fff;

    text-align:center;

    padding:25px;

    border-radius:15px;

    box-shadow:0 8px 25px rgba(0,0,0,.08);

    transition:.3s;

}

.box:hover{

    transform:translateY(-10px);

}

.box i{

    font-size:38px;

    color:#FFC107;

    margin-bottom:15px;

}

.box h3{

    color:#111;

    margin-bottom:8px;

    font-size:20px;

}

.box p{

    color:#666;

    font-size:15px;

}

.about-btn{

    display:inline-block;

    padding:15px 40px;

    background:#E53935;

    color:#fff;

    border-radius:40px;

    font-size:17px;

    font-weight:600;
    justify-content: center;
    transition:.3s;
    text-align: center;

}

.about-btn:hover{

    background:#FFC107;

    color:#111;

}

.menu {
  padding: 60px 20px;
  /* background: #fff0f5; light pink faint background */
  text-align: center;
  background: #fff5f7;
  height: 300px;
}
.item-name {
  margin-top: 10px;
  font-size: 18px;
  font-weight: 600;
  color: #222;
}

.menu h2 {
  font-size: 36px;
  margin-bottom: 10px;
  color: #222;
}

.subtitle {
  color: #777;
  margin-bottom: 40px;
}

.menu-container {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 25px;
  max-width: 1200px;
  margin: auto;
}

.menu-card {
  background: #fff;
  border-radius: 10px;
  /* padding: 10px; */
  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
  transition: 0.3s;
}

.menu-card:hover {
  transform: translateY(-8px);
}

.menu-card img {
  width: 100%;
  height: 180px;
  object-fit: cover;
  border-radius: 12px;
}

.menu-card h3 {
  margin: 10px 0 5px;
}

.menu-card p {
  font-size: 14px;
  color: #666;
}

.menu-card span {
  display: inline-block;
  margin-top: 8px;
  font-weight: bold;
  color: #e91e63;
}



*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, sans-serif;
}

/* IMPORTANT: safe spacing between sections */
section{
  width: 100%;
  display: block;
}

/* REVIEWS SECTION */
.reviews-section{
  padding: 120px;
  padding-bottom: 60px;
  text-align: center;
  position: relative;
  margin-top: 60px;   /* 🔥 THIS FIXES OVERLAP */
}

/* TITLE */
.reviews-section h2{
  font-size: 30px;
  margin-bottom: 30px;
  margin: 0 0 40px 0;
  color: #E53935;
}

/* ROW - ONE LINE */
.reviews-row{
  display: flex;
  flex-wrap: nowrap;
  gap: 15px;
  justify-content: flex-start;
  padding: 0 20px;
  overflow-x: auto;
}

/* hide scrollbar */
.reviews-row::-webkit-scrollbar{
  display: none;
}

/* CARD */
.review-card{
  flex: 0 0 auto;
  width: 200px;
  min-height: 250px;
  padding: 15px;
  border-radius: 12px;
  text-align: center;
  background: #fff;
  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
}

/* IMAGE CENTER FIX */
.review-card img{
  display: block;
  margin: 0 auto 10px;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  object-fit: cover;
}

.feedback{
    padding:80px 8%;
    /* background:#fff8f0; */
    text-align:center;
}

.feedback h2{
    font-size:40px;
    margin-bottom:10px;
}

.feedback-subtitle{
    color:#666;
    margin-bottom:35px;
}

.feedback-form{
    max-width:400px;
    margin:auto;
    padding:30px;
    border-radius:15px;
    box-shadow:0 10px 25px rgba(0,0,0,.1);
}
.feedback-form h2{
    color: black;
}

.feedback-form input,
.feedback-form textarea{
    width:100%;
    padding:15px;
    margin-bottom:20px;
    border:1px solid #ddd;
    border-radius:8px;
    font-size:16px;
    outline:none;
}

.feedback-form input:focus,
.feedback-form textarea:focus{
    border-color:#FFC107;
}

.feedback-btn{
    width:100%;
    padding:15px;
    border:none;
    border-radius:8px;
    background:#E53935;
    color:white;
    font-size:18px;
    cursor:pointer;
    transition:.3s;
}

.feedback-btn:hover{
    background:#FFC107;
    color:black;
}
#feedbackMessage{
    margin-top:15px;
    font-size:16px;
    font-weight:600;
    color:green;
    text-align:center;
}

/* STARS */
.stars{
  color: gold;
  margin: 5px 0;
}

/* TEXT */
.review-card p{
  font-size: 14px;
  color: #555;
}

.footer{
    background:#111;
    color:#fff;
    padding:20px 4%;
}

.footer-container{
    display:grid;
    grid-template-columns:repeat(5,1fr);
    gap:40px;
}

.footer-box h2{
    font-size:28px;
    margin-bottom:15px;
    color: #E53935;
}
/* 
.footer-box h2 span{
    color:#FFC107;
} */

.tagline{
    color:#ccc;
    line-height:1.7;
}

.footer-box h3{
    color:#E53935;
    margin-bottom:20px;
    font-size:22px;
}

.footer-box a{
    display:block;
    text-decoration:none;
    color:#ddd;
    margin-bottom:12px;
    transition:.3s;
}

.footer-box a:hover{
    color:#FFC107;
    padding-left:8px;
}

.footer-box p{
    color:#ddd;
    margin-bottom:12px;
    line-height:1.8;
}

.social-icons{
    display:flex;
    gap:15px;
}

.social-icons a{
    width:45px;
    height:45px;
    background:#222;
    display:flex;
    align-items:center;
    justify-content:center;
    border-radius:50%;
    color:white;
    font-size:18px;
    transition:.3s;
}

.social-icons a:hover{
    background:#FFC107;
    color:black;
    transform:translateY(-5px);
}

hr{
    margin:40px 0 20px;
    border:1px solid #333;
}

.copyright{
    text-align:center;
    color:#aaa;
}

@media(max-width:992px){

.footer-container{
    grid-template-columns:repeat(2,1fr);
}

}

@media(max-width:600px){

.footer-container{
    grid-template-columns:1fr;
    text-align:center;
}

.social-icons{
    justify-content:center;
}

}



@media (max-width: 768px) {

    .menu-icon{
        display: block;
    }

    .nav-links{
        display: none;
        position: absolute;
        top: 70px;
        left: 0;
        width: 100%;
        background: white;
        flex-direction: column;
        align-items: center;
        padding: 15px 0;
        z-index: 1000;
    }

    .nav-links.active{
        display: flex;
    }

}

.second-slide{
    margin-top: 120px;
}

#welcome:empty {
    display: none;
}

